--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                 <p>
                 <h4>News</h4>
                 <ul>
+                <li> Our paper <a href="https://arxiv.org/abs/2206.11140"> Understanding and Extending Subgraph GNNs by Rethinking Their Symmetries
+</a> was accepted as an <b>oral presentation</b> to NeurIPS2022</li>
+
                 <li> Our paper <a href="https://arxiv.org/abs/2110.02910"> Equivariant Subgraph Aggregation Networks</a> was accepted as a <b>spotlight presentation</b> to ICLR2022</li>
                 <li> A <a href="https://towardsdatascience.com/using-subgraphs-for-more-expressive-gnns-8d06418d5ab"> new blog post on subggraph GNNs</a> on Towards Data Science.</li>
                 <li> The Second <a href="https://gdl-israel.github.io/"> Israeli Workshop on Geometric Deep Learning</a> took place virtually on October 11th 2021. See full video recording <a href="https://youtu.be/aRWPSsDT9kk">here</a>.</li>
