--- a/index.html
+++ b/index.html
@@ -122,8 +122,13 @@
 
 
             </div>
+            <center>
+            <a class="twitter-timeline" data-width="1000" data-height="400" href="https://twitter.com/HaggaiMaron?ref_src=twsrc%5Etfw">Tweets by HaggaiMaron</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </center>
+
         </div><!-- end of row -->
     </div>
+
 </section><!-- end of templatemo_about -->
 
 
