--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
+                  <li> See my recent talk on <a href='https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119'>Subgraph-based networks for expressive, efficient, and domain-independent graph learning </a> at the <a href='https://conferences.cirm-math.fr/2588.html'> Signal Processing and Machine Learning on Graphs </a> hosted by <a href='https://www.cirm-math.com/'> CIRM </a> . </li>
                 <li> Our paper <a href="https://arxiv.org/abs/2206.11140"> Understanding and Extending Subgraph GNNs by Rethinking Their Symmetries
 </a> was accepted as an <b>oral presentation</b> to NeurIPS2022</li>
 
@@ -161,6 +162,10 @@
 Our first step in answering these questions is a novel symmetry analysis which shows that modelling the symmetries of node-based subgraph collections requires a significantly smaller symmetry group than the one adopted in previous works. This analysis is then used to establish a link between Subgraph GNNs and Invariant Graph Networks (IGNs).
 We answer the questions above by first bounding the expressive power of subgraph methods by 3-WL, and then proposing a general family of message-passing layers for subgraph methods that generalises all previous node-based Subgraph GNNs. Finally, we design a novel Subgraph GNN dubbed \SUN{}, which theoretically unifies previous architectures while providing better empirical performance on multiple benchmarks."> Abstract</a>
                  <a href="https://arxiv.org/abs/2206.11140" class="btn btn-default">Paper </a>
+                 <a href="https://github.com/beabevi/SUN" class="btn btn-default">Code </a>
+                 <a href="https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119" class="btn btn-default"> Talk</a>
+
+
              </div>
            </div><!-- end of row -->
 
@@ -202,6 +207,9 @@ We answer the questions above by first bounding the expressive power of subgraph
                  </p>
                  <a class="btn btn-default abstract" ptitle="Many machine learning tasks involve processing eigenvectors derived from data. Especially valuable are Laplacian eigenvectors, which capture useful structural information about graphs and other geometric objects. However, ambiguities arise when computing eigenvectors: for each eigenvector v, the sign flipped −v is also an eigenvector. More generally, higher dimensional eigenspaces contain infinitely many choices of basis eigenvectors. These ambiguities make it a challenge to process eigenvectors and eigenspaces in a consistent way. In this work we introduce SignNet and BasisNet -- new neural architectures that are invariant to all requisite symmetries and hence process collections of eigenspaces in a principled manner. Our networks are universal, i.e., they can approximate any continuous function of eigenvectors with the proper invariances. They are also theoretically strong for graph representation learning -- they can approximate any spectral graph convolution, can compute spectral invariants that go beyond message passing neural networks, and can provably simulate previously proposed graph positional encodings. Experiments show the strength of our networks for learning spectral graph filters and learning graph positional encodings."> Abstract</a>
                  <a href="https://arxiv.org/abs/2202.13013" class="btn btn-default">Paper </a>
+                 <a href="https://github.com/cptq/SignNet-BasisNet" class="btn btn-default">Code </a>
+
+
              </div>
            </div><!-- end of row -->
 
@@ -220,6 +228,9 @@ We answer the questions above by first bounding the expressive power of subgraph
                       </p>
                       <a class="btn btn-default abstract" ptitle="Equivariance to permutations and rigid motions is an important inductive bias for various 3D learning problems. Recently it has been shown that the equivariant Tensor Field Network architecture is universal -- it can approximate any equivariant function. In this paper we suggest a much simpler architecture, prove that it enjoys the same universality guarantees and evaluate its performance on Modelnet40. "> Abstract</a>
                       <a href="https://arxiv.org/abs/2203.01216" class="btn btn-default">Paper </a>
+                      <a href="https://github.com/simpleinvariance/UniversalNetwork" class="btn btn-default">Code </a>
+
+
                   </div>
                 </div><!-- end of row -->
 
@@ -303,6 +314,7 @@ We answer the questions above by first bounding the expressive power of subgraph
                  <a href="https://arxiv.org/abs/2110.02910" class="btn btn-default">Paper </a>
                  <a href="https://github.com/beabevi/ESAN" class="btn btn-default">GitHub</a>
                  <a href="https://towardsdatascience.com/using-subgraphs-for-more-expressive-gnns-8d06418d5ab" class="btn btn-default">Blog post </a>
+                 <a href="https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119" class="btn btn-default"> Talk</a>
 
 
              </div>
