--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 				<p>
           I am a senior research scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> and a member of <a href="https://nv-research-tlv.netlify.app/">NVIDIA's TLV lab</a>.
           I will be joining the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a> as an Assistant Professor in 2023.
-          My main fields of interest are machine learning, optimization, and shape analysis. In particular, I am working on applying deep learning to irregular domains (e.g., sets, graphs, point clouds, and surfaces), usually by leveraging their symmetry structure.
+          My main field of interest is machine learning. In particular, I am working on applying deep learning to structured domains (e.g., sets, graphs, point clouds, and surfaces), usually by leveraging their symmetry structure. 
           I completed my Ph.D. in 2019 at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>. </br>
           <!--I serve as a reviewer for NeurIPS, ICML, ICCV, SIGGRAPH, SIGGRAPH Asia and ACM TOG.<br>-->
           My CV can be found <a href="cv.pdf">here</a>.
 
           <h4>Prospective students:</h4>
-          I am seeking highly motivated Ph.D. students to join my new lab at the Technion. My research combines machine learning, algebra, and graph theory, so knowledge and interest in these fields are a big plus.
+          I am seeking highly motivated Ph.D. students to join my new lab at the Technion. My research combines machine learning, algebra, and some aspects of graph theory, so knowledge and/or interest in these fields are a big plus.
           Coding skills are also required. You can get an idea of what I am working on by taking a look at these two recent talks I gave:
           <ul>
           <li><a href='https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119'>Subgraph-based networks for expressive, efficient, and domain-independent graph learning </a></li>
@@ -92,7 +92,8 @@
                 <p>
                 <h4>News</h4>
                 <ul>
-                  <li> See my recent talk on <a href='https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119'>Subgraph-based networks for expressive, efficient, and domain-independent graph learning </a> at the <a href='https://conferences.cirm-math.fr/2588.html'> Signal Processing and Machine Learning on Graphs </a> hosted by <a href='https://www.cirm-math.com/'> CIRM </a> . </li>
+                  <li> See our recent tutorial on <a href='https://www.youtube.com/watch?v=ASQYjbUBYzs'>Exploring the practical and theoretical landscape of expressive graph neural networks </a> given at the <a href='https://logconference.org/'> Learning on Graphs Conference </a>. With With Fabrizio Frasca and Beatrice Bevilacqua. </li>
+                <li> See my recent talk on <a href='https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119'>Subgraph-based networks for expressive, efficient, and domain-independent graph learning </a> at the <a href='https://conferences.cirm-math.fr/2588.html'> Signal Processing and Machine Learning on Graphs </a> hosted by <a href='https://www.cirm-math.com/'> CIRM </a> . </li>
                 <li> Our paper <a href="https://arxiv.org/abs/2206.11140"> Understanding and Extending Subgraph GNNs by Rethinking Their Symmetries
 </a> was accepted as an <b>oral presentation</b> to NeurIPS2022</li>
 
