--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<p>
           I am a senior research scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> and a member of <a href="https://nv-research-tlv.netlify.app/">NVIDIA's TLV lab</a>.
           I will be joining the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a> as an Assistant Professor in 2023.
-          My main field of interest is machine learning. In particular, I am working on applying deep learning to structured domains (e.g., sets, graphs, point clouds, and surfaces), usually by leveraging their symmetry structure. 
+          My main field of interest is machine learning. In particular, I am working on applying deep learning to structured domains (e.g., sets, graphs, point clouds, and surfaces), usually by leveraging their symmetry structure.
           I completed my Ph.D. in 2019 at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>. </br>
           <!--I serve as a reviewer for NeurIPS, ICML, ICCV, SIGGRAPH, SIGGRAPH Asia and ACM TOG.<br>-->
           My CV can be found <a href="cv.pdf">here</a>.
@@ -79,10 +79,11 @@
           <li><a href='https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119'>Subgraph-based networks for expressive, efficient, and domain-independent graph learning </a></li>
 
           <li> <a href='https://www.youtube.com/watch?v=k3E3XyMtQcA&list=PL7VfmMOOwNlJ5PndlhiMwjvqDTA6m1Z9i&index=2&t=120s'>Leveraging Permutation Group Symmetries for Equivariant Neural Networks </a></li>
+
           </ul>
-
+          You ca nalso listen to a recent <a href='https://explainable.podbean.com/e/%d7%a8%d7%a9%d7%aa%d7%95%d7%aa%d7%a0%d7%95%d7%99%d7%a8%d7%95%d7%a0%d7%99%d7%9d%d7%a2%d7%9c-%d7%92%d7%a8%d7%a4%d7%99%d7%9d-%d7%a2/?fbclid=IwAR2oz8wjYc0qSwIt2clNWrFeMzNJMvV5Ycop166V6p5ZSB0JYeHF8sEkghg
+'>podcast </a> with me on graph neural networks (hebrew).
           				<br>
-
                 </p>
 				<p>
 				<b>Email:</b> hmaron (at) nvidia.com, <a href="https://scholar.google.co.il/citations?user=4v8uJrIAAAAJ">Google scholar page</a>, <a href="https://github.com/Haggaim">GitHub page</a><br>
@@ -92,11 +93,9 @@
                 <p>
                 <h4>News</h4>
                 <ul>
-                  <li> See our recent tutorial on <a href='https://www.youtube.com/watch?v=ASQYjbUBYzs'>Exploring the practical and theoretical landscape of expressive graph neural networks </a> given at the <a href='https://logconference.org/'> Learning on Graphs Conference </a>. With With Fabrizio Frasca and Beatrice Bevilacqua. </li>
-                <li> See my recent talk on <a href='https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119'>Subgraph-based networks for expressive, efficient, and domain-independent graph learning </a> at the <a href='https://conferences.cirm-math.fr/2588.html'> Signal Processing and Machine Learning on Graphs </a> hosted by <a href='https://www.cirm-math.com/'> CIRM </a> . </li>
-                <li> Our paper <a href="https://arxiv.org/abs/2206.11140"> Understanding and Extending Subgraph GNNs by Rethinking Their Symmetries
-</a> was accepted as an <b>oral presentation</b> to NeurIPS2022</li>
 
+                <li> A recent <a href='https://explainable.podbean.com/e/%d7%a8%d7%a9%d7%aa%d7%95%d7%aa%d7%a0%d7%95%d7%99%d7%a8%d7%95%d7%a0%d7%99%d7%9d%d7%a2%d7%9c-%d7%92%d7%a8%d7%a4%d7%99%d7%9d-%d7%a2/?fbclid=IwAR2oz8wjYc0qSwIt2clNWrFeMzNJMvV5Ycop166V6p5ZSB0JYeHF8sEkghg
+'>podcast </a> with me on graph neural networks (hebrew)</li>
                 <li> Our paper <a href="https://arxiv.org/abs/2110.02910"> Equivariant Subgraph Aggregation Networks</a> was accepted as a <b>spotlight presentation</b> to ICLR2022</li>
                 <li> A <a href="https://towardsdatascience.com/using-subgraphs-for-more-expressive-gnns-8d06418d5ab"> new blog post on subggraph GNNs</a> on Towards Data Science.</li>
                 <li> The Second <a href="https://gdl-israel.github.io/"> Israeli Workshop on Geometric Deep Learning</a> took place virtually on October 11th 2021. See full video recording <a href="https://youtu.be/aRWPSsDT9kk">here</a>.</li>
