--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
 
                 <li> A recent <a href='https://explainable.podbean.com/e/%d7%a8%d7%a9%d7%aa%d7%95%d7%aa%d7%a0%d7%95%d7%99%d7%a8%d7%95%d7%a0%d7%99%d7%9d%d7%a2%d7%9c-%d7%92%d7%a8%d7%a4%d7%99%d7%9d-%d7%a2/?fbclid=IwAR2oz8wjYc0qSwIt2clNWrFeMzNJMvV5Ycop166V6p5ZSB0JYeHF8sEkghg
 '>podcast </a> with me on graph neural networks (hebrew)</li>
+                <li> See our recent tutorial on <a href='https://www.youtube.com/watch?v=ASQYjbUBYzs'>Exploring the practical and theoretical landscape of expressive graph neural networks </a> given at the <a href='https://logconference.org/'> Learning on Graphs Conference </a>. With With Fabrizio Frasca and Beatrice Bevilacqua. </li>
+                <li> See my recent talk on <a href='https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119'>Subgraph-based networks for expressive, efficient, and domain-independent graph learning </a> at the <a href='https://conferences.cirm-math.fr/2588.html'> Signal Processing and Machine Learning on Graphs </a> hosted by <a href='https://www.cirm-math.com/'> CIRM </a> . </li>
+                <li> Our paper <a href="https://arxiv.org/abs/2206.11140"> Understanding and Extending Subgraph GNNs by Rethinking Their Symmetries
+</a> was accepted as an <b>oral presentation</b> to NeurIPS2022</li>
                 <li> Our paper <a href="https://arxiv.org/abs/2110.02910"> Equivariant Subgraph Aggregation Networks</a> was accepted as a <b>spotlight presentation</b> to ICLR2022</li>
                 <li> A <a href="https://towardsdatascience.com/using-subgraphs-for-more-expressive-gnns-8d06418d5ab"> new blog post on subggraph GNNs</a> on Towards Data Science.</li>
                 <li> The Second <a href="https://gdl-israel.github.io/"> Israeli Workshop on Geometric Deep Learning</a> took place virtually on October 11th 2021. See full video recording <a href="https://youtu.be/aRWPSsDT9kk">here</a>.</li>
