--- a/index.html
+++ b/index.html
@@ -154,6 +154,35 @@
             <h1>Publications</h1>
         </div>
       </div>
+
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/signnet/rep.png" width="300" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Sign and Basis Invariant Networks for Spectral Graph Representation Learning</h2>
+                 <p>
+                   Derek Lim*, Joshua Robinson*, Lingxiao Zhao, Tess Smidt, Suvrit Sra, Haggai Maron, Stefanie Jegelka<br>
+                   <i> International Conference on Learning Representations (ICLR 2023)  </i> <br>
+                   <p style="color:red;"> Spotlight </p> <br>
+
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Many machine learning tasks involve processing eigenvectors derived from data. Especially valuable are Laplacian eigenvectors, which capture useful structural information about graphs and other geometric objects. However, ambiguities arise when computing eigenvectors: for each eigenvector v, the sign flipped −v is also an eigenvector. More generally, higher dimensional eigenspaces contain infinitely many choices of basis eigenvectors. These ambiguities make it a challenge to process eigenvectors and eigenspaces in a consistent way. In this work we introduce SignNet and BasisNet -- new neural architectures that are invariant to all requisite symmetries and hence process collections of eigenspaces in a principled manner. Our networks are universal, i.e., they can approximate any continuous function of eigenvectors with the proper invariances. They are also theoretically strong for graph representation learning -- they can approximate any spectral graph convolution, can compute spectral invariants that go beyond message passing neural networks, and can provably simulate previously proposed graph positional encodings. Experiments show the strength of our networks for learning spectral graph filters and learning graph positional encodings."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2202.13013" class="btn btn-default">Paper </a>
+                 <a href="https://github.com/cptq/SignNet-BasisNet" class="btn btn-default">Code </a>
+
+
+             </div>
+           </div><!-- end of row -->
+
+
+
+
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
@@ -204,26 +233,7 @@ We answer the questions above by first bounding the expressive power of subgraph
 
 
 
-      <!--Open problems -->
-         <div class="row" id="templatemo_publications_LargeScaleBD">
-             <div class="col-md-1"></div>
-             <div class="col-md-5 col-sm-7 col-xs-24">
-                 <img src="projects/signnet/rep.png" width="300" " alt="">
-             </div>
-             <div class="col-md-1"></div>
-             <div class="col-md-16">
-                 <h2>Sign and Basis Invariant Networks for Spectral Graph Representation Learning</h2>
-                 <p>
-                   Derek Lim*, Joshua Robinson*, Lingxiao Zhao, Tess Smidt, Suvrit Sra, Haggai Maron, Stefanie Jegelka<br>
-                   <i> Technical report, February 2022  </i> <br>
-                 </p>
-                 <a class="btn btn-default abstract" ptitle="Many machine learning tasks involve processing eigenvectors derived from data. Especially valuable are Laplacian eigenvectors, which capture useful structural information about graphs and other geometric objects. However, ambiguities arise when computing eigenvectors: for each eigenvector v, the sign flipped −v is also an eigenvector. More generally, higher dimensional eigenspaces contain infinitely many choices of basis eigenvectors. These ambiguities make it a challenge to process eigenvectors and eigenspaces in a consistent way. In this work we introduce SignNet and BasisNet -- new neural architectures that are invariant to all requisite symmetries and hence process collections of eigenspaces in a principled manner. Our networks are universal, i.e., they can approximate any continuous function of eigenvectors with the proper invariances. They are also theoretically strong for graph representation learning -- they can approximate any spectral graph convolution, can compute spectral invariants that go beyond message passing neural networks, and can provably simulate previously proposed graph positional encodings. Experiments show the strength of our networks for learning spectral graph filters and learning graph positional encodings."> Abstract</a>
-                 <a href="https://arxiv.org/abs/2202.13013" class="btn btn-default">Paper </a>
-                 <a href="https://github.com/cptq/SignNet-BasisNet" class="btn btn-default">Code </a>
 
-
-             </div>
-           </div><!-- end of row -->
 
            <!--Open problems -->
               <div class="row" id="templatemo_publications_LargeScaleBD">
