--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
-                <li> I will serve as an area chair at NeurIPS 2023./li>
+                <li> I will serve as an area chair at NeurIPS 2023.</li>
                 <li> A recent <a href='https://explainable.podbean.com/e/%d7%a8%d7%a9%d7%aa%d7%95%d7%aa%d7%a0%d7%95%d7%99%d7%a8%d7%95%d7%a0%d7%99%d7%9d%d7%a2%d7%9c-%d7%92%d7%a8%d7%a4%d7%99%d7%9d-%d7%a2/?fbclid=IwAR2oz8wjYc0qSwIt2clNWrFeMzNJMvV5Ycop166V6p5ZSB0JYeHF8sEkghg
 '>podcast </a> with me on graph neural networks (hebrew)</li>
                 <li> See our recent tutorial on <a href='https://www.youtube.com/watch?v=ASQYjbUBYzs'>Exploring the practical and theoretical landscape of expressive graph neural networks </a> given at the <a href='https://logconference.org/'> Learning on Graphs Conference </a>. With With Fabrizio Frasca and Beatrice Bevilacqua. </li>
