--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@
           My main field of interest is machine learning. In particular, I am working on applying deep learning to structured domains (e.g., sets, graphs, point clouds, and surfaces), usually by leveraging their symmetry structure.
           I completed my Ph.D. in 2019 at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>. </br>
           <!--I serve as a reviewer for NeurIPS, ICML, ICCV, SIGGRAPH, SIGGRAPH Asia and ACM TOG.<br>-->
-          My CV can be found <a href="cv.pdf">here</a>.
+          <!--<My CV can be found <a href="cv.pdf">here</a>.
 
           <h4>Prospective students:</h4>
           I am seeking highly motivated Ph.D. students to join my new lab at the Technion. My research combines machine learning, and some aspects of algebra and graph theory, so knowledge and/or interest in these fields are a big plus.
-          Coding skills are also required. You can get an idea of what I am working on by taking a look at these two recent talks I gave:
+          Coding skills are also required. -->
+
+          You can get an idea of what I am working on by taking a look at these two recent talks I gave:
           <ul>
           <li><a href='https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119'>Subgraph-based networks for expressive, efficient, and domain-independent graph learning </a></li>
 
