--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="col-md-16">
                 <h2>Haggai Maron</h2>
 				<p>
-          I am a senior research scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> and a member of <a href="https://nv-research-tlv.netlify.app/">NVIDIA's TLV lab</a>.
+          I am a senior research scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> and a member of <a href="https://research.nvidia.com/labs/par/">NVIDIA's TLV lab</a>.
           I am also an incoming Assistant Professor at the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a>.
           My main field of interest is machine learning. In particular, I am working on applying deep learning to structured domains (e.g., sets, graphs, point clouds, and surfaces), usually by leveraging their symmetry structure.
           I completed my Ph.D. in 2019 at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>. </br>
