--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <div class="col-md-16">
                 <h2>Haggai Maron</h2>
 				<p>
-          I am a senior research scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> and a member of <a href="https://research.nvidia.com/labs/par/">NVIDIA's TLV lab</a>.
-          I am also an incoming Assistant Professor at the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a>.
-          My main field of interest is machine learning. In particular, I am working on applying deep learning to structured domains (e.g., sets, graphs, point clouds, and surfaces), usually by leveraging their symmetry structure.
+          I am an Assistant Professor at the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a>.
+          I am also a senior research scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> and a member of <a href="https://research.nvidia.com/labs/par/">NVIDIA's TLV lab</a>.
+          My main field of interest is machine learning. In particular, I am working on applying deep learning to structured domains (e.g., sets, graphs, point clouds, surfaces and weight spaces), usually by leveraging their symmetry structure.
           I completed my Ph.D. in 2019 at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>. </br>
           <!--I serve as a reviewer for NeurIPS, ICML, ICCV, SIGGRAPH, SIGGRAPH Asia and ACM TOG.<br>-->
           <!--<My CV can be found <a href="cv.pdf">here</a>.
@@ -78,6 +78,8 @@
 
           You can get an idea of what I am working on by taking a look at these two recent talks I gave:
           <ul>
+            <li><a href='https://www.youtube.com/watch?v=B9xFem6_ckQ&t=8182s'>Equivaraint architectures for learning in deep weight spaces </a></li>
+
           <li><a href='https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119'>Subgraph-based networks for expressive, efficient, and domain-independent graph learning </a></li>
 
           <li> <a href='https://www.youtube.com/watch?v=k3E3XyMtQcA&list=PL7VfmMOOwNlJ5PndlhiMwjvqDTA6m1Z9i&index=2&t=120s'>Leveraging Permutation Group Symmetries for Equivariant Neural Networks </a></li>
@@ -95,6 +97,8 @@
                 <p>
                 <h4>News</h4>
                 <ul>
+                <li> See my recent talk on <a href='https://www.youtube.com/watch?v=B9xFem6_ckQ&t=8182s'>Equivaraint architectures for learning in deep weight spaces </a>. </li>
+
                 <li> I will serve as an area chair at NeurIPS 2023.</li>
                 <li> A recent <a href='https://explainable.podbean.com/e/%d7%a8%d7%a9%d7%aa%d7%95%d7%aa%d7%a0%d7%95%d7%99%d7%a8%d7%95%d7%a0%d7%99%d7%9d%d7%a2%d7%9c-%d7%92%d7%a8%d7%a4%d7%99%d7%9d-%d7%a2/?fbclid=IwAR2oz8wjYc0qSwIt2clNWrFeMzNJMvV5Ycop166V6p5ZSB0JYeHF8sEkghg
 '>podcast </a> with me on graph neural networks (hebrew)</li>
@@ -162,6 +166,53 @@
       </div>
 
 
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/signequi/rep.png" width="300" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Expressive Sign Equivariant Networks for Spectral Geometric Learning</h2>
+                 <p>
+                   Derek Lim, Joshua Robinson, Stefanie Jegelka, Haggai Maron<br>
+                   <i>37th Annual Conference on Neural Information Processing Systems (NeurIPS 2023)  </i> <br>
+                   <p style="color:red;">Spotlight Presentation</p>
+
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Recent work has shown the utility of developing machine learning models that respect the symmetries of eigenvectors.
+              These works promote sign invariance, since for any eigenvector $v$ the negation $-v$ is also an eigenvector.
+In this work, we demonstrate that sign \emph{equivariance} is useful for applications such as building orthogonally equivariant models and link prediction.
+To obtain these benefits, we develop novel sign equivariant neural network architectures. These models are based on our analytic characterization of the sign equivariant polynomials  and thus inherit provable expressiveness properties."> Abstract</a>
+                 <a href="" class="btn btn-default">Paper </a>
+
+
+             </div>
+           </div><!-- end of row -->
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/norm-guided/rep.png" width="300" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Norm-guided latent space exploration for text-to-image generation</h2>
+                 <p>
+                   Dvir Samuel, Rami Ben-Ari, Nir Darshan, Haggai Maron, Gal Chechik <br>
+                   <i>37th Annual Conference on Neural Information Processing Systems (NeurIPS 2023)  </i> <br>
+                   </p>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Text-to-image diffusion models show great potential in synthesizing a large variety of concepts in new compositions and scenarios. However, their latent seed space is still not well understood and has been shown to have an impact in generating new and rare concepts. Specifically, simple operations like interpolation and centroid finding work poorly with the standard Euclidean and spherical metrics in the latent space. This paper makes the observation that current training procedures make diffusion models biased toward inputs with a narrow range of norm values. This has strong implications for methods that rely on seed manipulation for image generation that can be further applied to few-shot and long-tail learning tasks. To address this issue, we propose a novel method for interpolating between two seeds and demonstrate that it defines a new non-Euclidean metric that takes into account a norm-based prior on seeds. We describe a simple yet efficient algorithm for approximating this metric and use it to further define centroids in the latent seed space. We show that our new interpolation and centroid evaluation techniques significantly enhance the generation of rare concept images. This further leads to state-of-the-art performance on few-shot and long-tail benchmarks, improving prior approach in terms of generation speed, image quality, and semantic content."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2306.08687" class="btn btn-default">Paper </a>
+                 <a href="https://github.com/dvirsamuel/SeedSelect" class="btn btn-default">Code </a>
+             </div>
+           </div><!-- end of row -->
+
+
 
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
@@ -180,6 +231,8 @@
                  </p>
                  <a class="btn btn-default abstract" ptitle="Designing machine learning architectures for processing neural networks in their raw weight matrix form is a newly introduced research direction. Unfortunately, the unique symmetry structure of deep weight spaces makes this design very challenging. If successful, such architectures would be capable of performing a wide range of intriguing tasks, from adapting a pre-trained network to a new domain to editing objects represented as functions (INRs or NeRFs). As a first step towards this goal, we present here a novel network architecture for learning in deep weight spaces. It takes as input a concatenation of weights and biases of a pre-trained MLP and processes it using a composition of layers that are equivariant to the natural permutation symmetry of the MLP's weights: Changing the order of neurons in intermediate layers of the MLP does not affect the function it represents. We provide a full characterization of all affine equivariant and invariant layers for these symmetries and show how these layers can be implemented using three basic operations: pooling, broadcasting, and fully connected layers applied to the input in an appropriate manner. We demonstrate the effectiveness of our architecture and its advantages over natural baselines in a variety of learning tasks."> Abstract</a>
                  <a href="https://arxiv.org/abs/2301.12780" class="btn btn-default">Paper </a>
+                 <a href="https://www.youtube.com/watch?v=B9xFem6_ckQ&t=8182s" class="btn btn-default">Talk </a>
+                 <a href="https://avivnavon.github.io/DWSNets/" class="btn btn-default">Code </a>
              </div>
            </div><!-- end of row -->
 
@@ -219,32 +272,13 @@
                  </p>
                  <a class="btn btn-default abstract" ptitle="Graph Neural Networks (GNN) are inherently limited in their expressive power. Recent seminal works (Xu et al., 2019; Morris et al., 2019b) introduced the Weisfeiler-Lehman (WL) hierarchy as a measure of expressive power. Although this hierarchy has propelled significant advances in GNN analysis and architecture developments, it suffers from several significant limitations. These include a complex definition that lacks direct guidance for model improvement and a WL hierarchy that is too coarse to study current GNNs. This paper introduces an alternative expressive power hierarchy based on the ability of GNNs to calculate equivariant polynomials of a certain degree. As a first step, we provide a full characterization of all equivariant graph polynomials by introducing a concrete basis, significantly generalizing previous results. Each basis element corresponds to a specific multi-graph, and its computation over some graph data input corresponds to a tensor contraction problem. Second, we propose algorithmic tools for evaluating the expressiveness of GNNs using tensor contraction sequences, and calculate the expressive power of popular GNNs. Finally, we enhance the expressivity of common GNN architectures by adding polynomial features or additional operations / aggregations inspired by our theory. These enhanced GNNs demonstrate state-of-the-art results in experiments across multiple graph learning benchmarks."> Abstract</a>
                  <a href="https://arxiv.org/abs/2302.11556" class="btn btn-default">Paper </a>
-             </div>
-           </div><!-- end of row -->
-
-
-      <!--Open problems -->
-         <div class="row" id="templatemo_publications_LargeScaleBD">
-             <div class="col-md-1"></div>
-             <div class="col-md-5 col-sm-7 col-xs-24">
-                 <img src="projects/signequi/rep.png" width="300" " alt="">
-             </div>
-             <div class="col-md-1"></div>
-             <div class="col-md-16">
-                 <h2>Expressive Sign Equivariant Networks for Spectral Geometric Learning</h2>
-                 <p>
-                   Derek Lim*, Joshua Robinson*, Stefanie Jegelka, Yaron Lipman, Haggai Maron<br>
-                   <i> ICLR 2023 Workshop on Physics for Machine Learning  </i> <br>
-                 </p>
-                 <a class="btn btn-default abstract" ptitle="Recent work has shown the utility of developing machine learning models that respect the symmetries of eigenvectors.
-These works promote sign invariance, since for any eigenvector $v$ the negation $-v$ is also an eigenvector.
-In this work, we demonstrate that sign \emph{equivariance} is useful for applications such as building orthogonally equivariant models and link prediction.
-To obtain these benefits, we develop novel sign equivariant neural network architectures. These models are based on our analytic characterization of the sign equivariant polynomials  and thus inherit provable expressiveness properties."> Abstract</a>
-                 <a href="" class="btn btn-default">Paper </a>
-
+                 <a href="https://github.com/omri1348/Equivariant-Polynomaials" class="btn btn-default">Code </a>
 
              </div>
            </div><!-- end of row -->
+
+
+
 
 
 
