--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                 <p>
                 <h4>Teaching</h4>
                 <ul>
+                <li>2023/winter (Technion):   Topics in learning on graphs </li>
                 <li>2019/spring (WIS):   Geometric and Algebraic Methods in Deep Learning </li>
                 <li>2018/winter (WIS):   Geometry and Deep Learning </li>
                 </ul>
@@ -164,6 +165,30 @@
             <h1>Publications</h1>
         </div>
       </div>
+
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/weight_aug/rep.png" width="400" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Data Augmentations in Deep Weight Spaces</h2>
+                 <p>
+                    Aviv Shamsian*, David W. Zhang*, Aviv Navon, Yan Zhang, Miltiadis Kofinas, Idan Achituve, Riccardo Valperga, Gertjan J. Burghouts, Efstratios Gavves, Cees G. M. Snoek, Ethan Fetaya, Gal Chechik, Haggai Maron <br>
+                    <i>Symmetry and Geometry in Neural Representations Workshop, 37th Annual Conference on Neural Information Processing Systems (NeurIPS 2023)  </i> <br>
+                   <p style="color:red;">Oral Presentation</p>
+
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Learning in weight spaces, where neural networks process the weights of other deep neural networks, has emerged as a promising research direction with applications in various fields, from analyzing and editing neural fields and implicit neural representations, to network pruning and quantization. Recent works designed architectures for effective learning in that space, which takes into account its unique, permutation-equivariant, structure. Unfortunately, so far these architectures suffer from severe overfitting and were shown to benefit from large datasets. This poses a significant challenge because generating data for this learning setup is laborious and time-consuming since each data sample is a full set of network weights that has to be trained. In this paper, we address this difficulty by investigating data augmentations for weight spaces, a set of techniques that enable generating new data examples on the fly without having to train additional input weight space elements. We first review several recently proposed data augmentation schemes and divide them into categories. We then introduce a novel augmentation scheme based on the Mixup method. We evaluate the performance of these techniques on existing benchmarks as well as new benchmarks we generate, which can be valuable for future studies."> Abstract</a>
+                 <a href="projects/weight_aug/paper.pdf" class="btn btn-default">Paper </a>
+
+
+             </div>
+           </div><!-- end of row -->
 
 
       <!--Open problems -->
